--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ohhhhh</title>
+    <title>Homework</title>
 </head>
 <body>
-    
+    <h1>Hello Sasha</h1>
+    <h2>Heeeyyy</h2>
+    <h3>hellofhdhhh</h3>
+    <h6>lets start</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et deleniti porro, totam saepe <br> incidunt ipsam delectus rerum suscipit, facilis inventore, nulla harum sapiente? Saepe, sint! Qui nisi at iusto!</p>
+    <p><font color="green" size="56">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam eaque nihil pariatur perspiciatis, quo quibusdam quidem ipsam reprehenderit provident sequi doloribus? Molestias rem aspernatur dicta molestiae minus quasi quae tempora.</font> </p> 
+    <p><b>ldhefrhhgedgjebbgbt</b></p>
+    <p><strong>heuejjjjjrfjjdeujdsihewwh</strong></p>
+    <p><strong><em>gvfrhigyhdj nfsnvndiofv jdnvuhuirhiu</em>fjhguhduhgvuehruhurh efugriuj<hr>jfrhgvydig</strong></p>
+    <p><i>uhevudhrghdihgdh</i></p>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro debitis magnam autem eaque distinctio ex. Quo voluptas tenetur ea ullam consequuntur iste inventore sapiente blanditiis, officia perspiciatis eveniet? Corporis, delectus.</span>
+    <span>56<sub>77</sub>85858<sub>fudsh</sub></span>
+    <p>
+        HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
+        <hr>
+        <del> Looooouhgrhguyygdugehgruugirugug </del>
+    </p>
+    <p>
+        <pre> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia doloremque, 
+            velit ipsam molestiae enim et dolore ipsum harum aspernatur eveniet maxime architecto doloribus asperiores numquam quam illo
+             repudiandae tenetur veritatis.</pre>
+        
+
+    </p>
+
 </body>
 </html>
